kubernetes/valinor/apps/fediverse/mastodon/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-ingress
  namespace: fediverse
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.valinor.social
    nginx.org/websocket-services: "mastodon-streaming"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - &host valinor.social
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon-web
                port:
                  number: 3000
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: mastodon-streaming
                port:
                  number: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: fediverse
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host elastic.valinor.social
  rules:
    - host: *host
      http:
        paths:
          - backend:
              service:
                name: mastodon-es-internal-http
                port:
                  number: 9200
            path: /
            pathType: Prefix
